update: Ipdate email on registyration and reset password

--- a/templates/notes.html
+++ b/templates/notes.html
@@ -79,7 +79,7 @@
   <body
     class
     style="
-      background-color: #161f33;
+      background-color: #ffffff;
       font-family: sans-serif;
       -webkit-font-smoothing: antialiased;
       font-size: 14px;
